sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:2: error: ':' expected but ')' found.
def bubbleSort(list)  {
                   ^AlgBubbleSort1:7: error: identifier expected but '}' found.
}
^